--- a/package.json
+++ b/package.json
@@ -5,20 +5,29 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "start-dev": "ts-node-dev --files src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.5",
+    "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@fastify/cors": "^9.0.1",
     "@prisma/client": "^5.7.1",
+    "bcrypt": "^5.1.1",
     "fastify": "^4.25.1",
-    "joi": "^17.11.0"
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "pino-pretty": "^10.3.1"
   }
 }
