--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "typeRoots": [
       "./src/@types",
       "./node_modules/@types"
-    ]
+    ],
+    "outDir": "dist"
   },
   "include": [
     "src/**/*",
