--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "prebuild": "npm install",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
-    "postinstall": "tsc",
-    "start-dev": "ts-node-dev --files src/index.ts"
+    "postinstall": "tsc && prisma generate",
+    "start-dev": "ts-node-dev --files src/index.ts",
+    "heroku-postbuild": "npm run prisma:generate && npm run build"
   },
   "keywords": [],
   "author": "",
