--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prebuild": "npm install",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
-    "postinstall": "tsc && prisma generate",
+    "postinstall": "tsc -p tsconfig.json && prisma generate",
     "start-dev": "ts-node-dev --files src/index.ts",
     "heroku-postbuild": "npm run prisma:generate && npm run build"
   },
