--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "engines": {
     "node": "18.x"
   },
@@ -11,10 +11,10 @@
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
     "start-dev": "ts-node-dev --files src/index.ts",
-    "heroku-postbuild": "npx prisma generate"
+    "heroku-postbuild": "npx prisma generate && npm run build"
   },
   "keywords": [],
-  "author": "",
+  "author": "Thiago Robles",
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
