--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
     "start-dev": "ts-node-dev --files src/index.ts",
-    "heroku-postbuild": "npx prisma generate && npm run build"
+    "heroku-postbuild": "npx prisma generate"
   },
   "keywords": [],
   "author": "Thiago Robles",
