--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "prebuild": "npm install",
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/index.js",
+    "start": "npm run build && node dist/index.js",
     "start-dev": "ts-node-dev --files src/index.ts",
     "heroku-postbuild": "npx prisma generate"
   },
