--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "fastify": "^4.25.1",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
-    "pino-pretty": "^10.3.1"
+    "pino-pretty": "^10.3.1",
+    "typescript": "^5.3.3"
   }
 }
