--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "scripts": {
     "prebuild": "npm install",
     "build": "tsc -p tsconfig.json",
-    "start": "npm run build && node dist/index.js",
+    "start": "node dist/index.js",
     "start-dev": "ts-node-dev --files src/index.ts",
-    "heroku-postbuild": "npx prisma generate"
+    "postinstall": "tsc -p tsconfig.json",
+    "heroku-postbuild": "npx prisma generate",
+    "deploy": "git add . && git commit -m 'heroku build' && git push heroku master"
   },
   "keywords": [],
   "author": "Thiago Robles",
@@ -23,8 +25,7 @@
     "@types/node": "^20.10.5",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "ts-node-dev": "^2.0.0"
   },
   "dependencies": {
     "@fastify/cors": "^9.0.1",
