--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
     "start-dev": "ts-node-dev --files src/index.ts",
-    "postinstall": "tsc -p tsconfig.json",
+    "postinstall": "npx prisma generate && tsc -p tsconfig.json",
     "heroku-postbuild": "npx prisma generate",
     "deploy": "git add . && git commit -m 'heroku build' && git push heroku master"
   },
