--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@fastify/cors": "^9.0.1",
     "@prisma/client": "^5.7.1",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.1",
     "fastify": "^4.25.1",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
