fix: fix update user

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prebuild": "npm install",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
-    "start-dev": "ts-node-dev --files src/index.ts",
+    "dev": "ts-node-dev --files src/index.ts",
     "postinstall": "npx prisma generate && tsc -p tsconfig.json",
     "heroku-postbuild": "npx prisma generate && npx prisma migrate deploy",
     "deploy": "git add . && git commit -m 'heroku build' && git push heroku master"
